// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EnvironmentBanner development render 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <div
      class="border-0 border-t border-solid border-t-green fixed text-center top-0 w-[100vw] z-snackbar text-xxs pointer-events"
    >
      <div
        class="bg-green rounded-b font-semibold text-white cursor-pointer inline-block px-2 py-[3px] tracking-[0.01em] uppercase select-none pointer-events"
      >
        Picasso development
      </div>
    </div>
  </div>
</div>
`;

exports[`EnvironmentBanner production render 1`] = `
<div>
  <div
    class="Picasso-root"
  />
</div>
`;

exports[`EnvironmentBanner render nothing in test environment 1`] = `
<div>
  <div
    class="Picasso-root"
  />
</div>
`;
